# hyprland-game-engine

./: .gitignore  DESIGN.md  README.md  STANDARDS.md  TODO.md  demo_boggle.py  demo_grid.py  engine_legacy.py  ghostty_game.conf  pyproject.toml
.github/: copilot-instructions.md
boggle/: boggle_game.py  game_state.py  server.py  test_boggle.py  tui.py
docs/: TODO.md
engine/: __init__.py  background.py  core.py  window.py
lexigraph_py/: __init__.py  game.py  server.py  tui.py
lexigraph_py/static/: styles.css
lexigraph_py/static/controller/: AudioController.ts  ControllerGrid.ts  index.html  main.ts
scripts/: check_hyprpy.py  check_hyprpy_dispatch.py  debug_dispatch.py  debug_semicolon.py  demo_boggle.py  demo_grid.py  dev.sh  fix_styles.py  grid_debug.py  kill_game.sh  run_test_server.py  setup_dev.sh
specs/: governance.md  lexigraph.md  structure.md
tests/: test_lexigraph.py  test_lexigraph_logic.py  test_lexigraph_migration.py  test_structure.py
