[project]
name = "hyprland-game-engine"
version = "0.1.0"
description = "A modular Python framework for building OS-level games on Hyprland"
requires-python = ">=3.10"
dependencies = [
    "flask",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "watchfiles",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.10"
